
OpenSLP Change Log
------------------

Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

08/04/00 rganesan@myrealbox.com
Documentation updates - codeset converted to iso-8859-1 and spell checked.

08/04/00 david.mccormack@ottawa.com
Modified slpd command line parameter parsing to print version and help 
information

08/02/00 rganesan@myrealbox.com
Build changes to take advantage of automake/libtool integration. Building 
with builddir != srcdir works. DESTDIR is supported for make install to
ease packaging. Test suites are integrated and run using 'make check'.  

07/17/00 mpeterson@calderasystems.com
Finalized the DA discovery routines in libslp

*** TAG OpenSLP 0.7.1 ***

07/11/00 mpeterson@calderasystems.com
Fixed 109269 - SLPFindSrvs callback no longer gives a LAST_CALL

07/11/00 david.mccormack@ottawa.com
Added a --enable-debug parameter to the configure script.  This option 
when activated allows for all the debug parameters to be set.

07/10/00 david.mccormack@ottawa.com
Fixxed a short coming of SLPEscape, it did not handle CTL, which it now 
does.

07/06/00 david.mccormack@ottawa.com
Removed all old Makefile and install scripts and replaced them with 
Automake/Autoconf ones.

07/06/00 david.mccormack@ottawa.com
Added in a NEWS file

06/28/00 mpeterson@calderasystems.com
Added multicast DA discover support to the library

06/28/00 mpeterson@calderasystems.com
Centralized the request reply engine for the library to libslp_network.c

06/28/00 mpeterson@calderasystems.com
Added support for net.slp.multicastTimeouts, net.slp.unicastTimeout, and
net.slp.DADiscoveryTimeouts

06/13/00 david.mccormack@ottawa.com
Added in SLPUnescape function, and changed the documentation to reflect 
it.
